dirが食えるように

--- a/asset.yaml
+++ b/asset.yaml
@@ -7,7 +7,13 @@ Context:
     Filename: out.mp4
     Codec: H264
 Resources:
-  - ImageFilename: ss.png
-    AudioFilename: 駅_素材1.mp3
-  - ImageFilename: ss_2.png
-    AudioFilename: 駅_素材2.mp3
+  - ImageFile:
+      Filename: ss.png
+    AudioFile:
+      IsDir: true
+      Dirname: ""
+  - ImageFile:
+      Filename: ss.png
+    AudioFile:
+      PatternMatch: false
+      Filename: 駅_素材2.mp3
